k8s/console/jhipster-console-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: jhipster-console-gateway
  namespace: default
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - jhipster-console.default.k8s.hibuz.com
    - port:
        number: 80
        name: http2
        protocol: HTTP2
      hosts:
        - jhipster-console.default.k8s.hibuz.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: jhipster-console-gw-virtualservice
  namespace: default
spec:
  hosts:
    - jhipster-console.default.k8s.hibuz.com
  gateways:
    - jhipster-console-gateway
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jhipster-console
